Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.2
-
None
-
-
f1011bd2e (dev), 18fead0d4 (6.6), 70c8ed05a (6.5)
Description
Any drag-n-drop operation with Qt built from the 6.5 branch (I'm running 99aeb7594b) will crash when dropping. An easy way to test is to run the Drag and Drop Puzzle" example and try to drag.
Reverting 8a359343621fa83941946cb4e661b54ca7a1c4cc makes it work again.
Attachments
Issue Links
- is duplicated by
-
QTBUG-114690 Qt Designer: crash during drag and drop
-
- Closed
-
-
QTBUG-114926 Designer crashes when trying to add a new item to a form
-
- Closed
-
- relates to
-
QTBUG-114622 [PhotoSurface] Dragging the image over app window causes the app to crash
-
- Closed
-
For Gerrit Dashboard: QTBUG-114236 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
481813,4 | macOS: Don't assume DnD is handled via internal drag loop | dev | qt/qtbase | Status: MERGED | +2 | 0 |
482786,2 | macOS: Don't assume DnD is handled via internal drag loop | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
482787,2 | macOS: Don't assume DnD is handled via internal drag loop | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |